# GreedyPathPlanning

./: CMakeLists.txt  README.md  README2.md
doc/: master-ipr-install.md
map1/openrave/: map1.env.xml  map1.kinbody.xml
map10/: README.md
map10/gazebo/: install.sh  map10.world  map10_world.launch
map10/openrave/: map10.env.xml  map10.kinbody.xml
map11/: README.md
map11/gazebo/: install.sh  map11.world  map11_world.launch
map11/openrave/: map11.env.xml  map11.kinbody.xml
map2/gazebo/: install.sh
map2/openrave/: map2.env.xml  map2.kinbody.xml
map3/openrave/: map3.env.xml  map3.kinbody.xml
map4/: README.md
map4/gazebo/: install.sh  map4_world.launch
map4/openrave/: map4.env.xml  map4.kinbody.xml
map5/: README.md
map5/gazebo/: install.sh  map5_world.launch
map5/openrave/: map5.env.xml
map6/: README.md
map6/gazebo/: install.sh  map6.world  map6_world.launch
map6/openrave/: map6.env.xml  map6.kinbody.xml
map7/: README.md
map7/gazebo/: install.sh  map7.world  map7_world.launch
map7/openrave/: map7.env.xml  map7.kinbody.xml
map8/: README.md
map8/gazebo/: install.sh  map8.world  map8_world.launch
map8/openrave/: map8.env.xml  map8.kinbody.xml
map9/: README.md
map9/gazebo/: install.sh  map9.world  map9_world.launch
map9/openrave/: map9.env.xml  map9.kinbody.xml
share/openrave/ecro/: ecro.robot.xml  kinect.robot.xml
src/bash/: README.md  execute_script.sh  iprSim
src/python/algorithms/bfs/: main.py
src/python/algorithms/greedy_algorithms/: main_greedy.py
videos/: video_out_a_star_1.avi  video_out_a_star_2.avi  video_out_a_star_6.avi  video_out_a_star_9.avi  video_out_best_1.avi  video_out_best_2.avi  video_out_best_3.avi  video_out_best_6.avi  video_out_best_8.avi  video_out_best_9.avi  video_out_breadth_1.avi  video_out_breadth_2.avi  video_out_depth_1.avi  video_out_depth_11.avi  video_out_depth_2.avi  video_out_depth_5.avi  video_out_depth_6.avi  video_out_depth_8.avi
